syntax = "proto3";

option csharp_namespace = "Api";

package stock;

import "google/protobuf/wrappers.proto";
import "Protos/stock.proto";

service UserService {
	rpc Register (RegisterRequest) returns (RegisterResponse);
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc UpdatePreferences (UpdatePreferencesRequest) returns (UpdatePreferencesResponse);
}

message RegisterRequest {
	string user_name = 1;
	string password = 2;
}

message RegisterResponse {
	Error error = 1;
}

message LoginRequest {
	string user_name = 1;
	string password = 2;
}

message LoginResponse {
	oneof result {
		string token = 1;
		Error error = 2;
	}
}

message UpdatePreferencesRequest {
	repeated CompanyInfo companies = 1;
}

message CompanyInfo {
	string name = 1;
	repeated string search_tags = 2;
}

message UpdatePreferencesResponse {
	Error error = 1;
}